force-app/main/default/objects/Reference_EDI__c/Reference_EDI__c.object-meta.xml
<CustomObject>
    <label>Reference EDI</label>
    <nameField>
        <displayFormat>Reference EDI -{00000000}</displayFormat>
        <label>Reference EDI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference EDIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>