force-app/main/default/objects/Reference_EDI__c/fields/Carrier_Agreements_s__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Agreements_s__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carrier Agreements(s)</label>
    <type>Checkbox</type>
</CustomField>