force-app/main/default/objects/Reference_EDI__c/fields/EDI_Current_Step__c.field-meta.xml
<CustomField>
    <fullName>EDI_Current_Step__c</fullName>
    <label>EDI Current Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>