force-app/main/default/objects/Reference_EDI__c/fields/HNBF_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>HNBF_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HNBF Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Reference EDIs</relationshipLabel>
    <relationshipName>Reference_EDIs</relationshipName>
    <type>Lookup</type>
</CustomField>