force-app/main/default/objects/Reference_EDI__c/fields/Reference_HNBF__c.field-meta.xml
<CustomField>
    <fullName>Reference_HNBF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference HNBF</label>
    <referenceTo>Reference_HNBF__c</referenceTo>
    <relationshipLabel>Reference EDIs</relationshipLabel>
    <relationshipName>Reference_EDIs</relationshipName>
    <type>Lookup</type>
</CustomField>