force-app/main/default/objects/Reference_EDI__c/fields/SFTP_Credentials_Received__c.field-meta.xml
<CustomField>
    <fullName>SFTP_Credentials_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SFTP Credentials Received</label>
    <type>Checkbox</type>
</CustomField>