force-app/main/default/objects/Reference_EDI__c/listViews/EDI_Engineer_Queue_Reference_EDI.listView-meta.xml
<ListView>
    <fullName>EDI_Engineer_Queue_Reference_EDI</fullName>
    <filterScope>Queue</filterScope>
    <label>EDI Engineer Queue</label>
    <queue>EDI_Engineer_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>